# juniper-cascor-worker

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude.yml  codeql.yml  lockfile-update.yml  publish.yml  scheduled-tests.yml  security-scan.yml
docs/: DEVELOPER_CHEATSHEET.md  DOCUMENTATION_OVERVIEW.md  QUICK_START.md  REFERENCE.md
juniper_cascor_worker/: __init__.py  cli.py  config.py  constants.py  exceptions.py  http_health.py  task_executor.py  worker.py  ws_connection.py
notes/: AGENTS_MD_DEVELOPMENT_ROADMAP_2026-04-02.md  AGENTS_MD_DRIFT_ANALYSIS_2026-04-02.md  AGENTS_MD_REMEDIATION_PLAN_2026-04-02.md  CFG_06_ENV_PREFIX_CONVERGENCE_DESIGN_2026-05-22.md  CONDA_DEPENDENCY_FILE_HEADER.md  HARDCODED_VALUES_ANALYSIS.md  HARDCODED_VALUES_REFACTOR_PLAN.md  PIP_DEPENDENCY_FILE_HEADER.md  PRE_COMMIT_REMEDIATION_PLAN.md  THREAD_HANDOFF_PROCEDURE.md  WORKTREE_CLEANUP_PROCEDURE.md  WORKTREE_CLEANUP_PROCEDURE_V2.md  WORKTREE_SETUP_PROCEDURE.md  juniper-cascor-worker_OTHER_DEPENDENCIES.md
notes/history/: FIX_TEST_IMPORT_MOCKING_PLAN.md
notes/pull_requests/: PR_SECURITY_HARDENING_2026-03-03.md
notes/releases/: RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md
scripts/: check_doc_links.py  generate_dep_docs.sh  juniper-cascor-worker-ctl  juniper-cascor-worker.service
tests/: conftest.py  test_cfg_06_env_prefix_aliases.py  test_cli.py  test_config.py  test_cw05_wave1_candidate_execution.py  test_http_health.py  test_integration_ws_server.py  test_no_pydantic_at_runtime.py  test_phase_4e_worker_fixes.py  test_protocol_alignment.py  test_resolve_file_indirection.py  test_sec18_binary_frame_bounds.py  test_task_executor.py  test_worker.py  test_worker_agent.py  test_worker_r1_3.py  test_ws_connection.py
util/: run_coverage.bash
util/ad-hoc/: README.md
