[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-cascor-worker"
version = "0.3.0"
description = "Remote candidate training worker for the JuniperCascor neural network service"
readme = "README.md"
license = "MIT"
authors = [{ name = "Paul Calnon" }]
requires-python = ">=3.12"
keywords = ["juniper", "cascade-correlation", "neural-network", "distributed-training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "websockets>=11.0",
    # METRICS-MON R2.2.6 / seed-05: single-sources the WorkerMessageType
    # StrEnum + BinaryFrame numpy codec used on /ws/v1/workers. Worker
    # imports ONLY ``juniper_cascor_protocol.worker.*`` at runtime —
    # the envelope subpackage (which would pull Pydantic) is never
    # touched, preserving the R2 exit-gate decision (juniper-ml#168).
    # Pydantic is still listed as a transitive dependency on disk but
    # never loaded by the worker process; verified by
    # tests/test_no_pydantic_at_runtime.py.
    "juniper-cascor-protocol>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
]
dev = [
    "juniper-cascor-worker[test]",
    "black>=26.3.1",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=7.0.0",
]

[project.scripts]
juniper-cascor-worker = "juniper_cascor_worker.cli:main"

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-cascor-worker"
Repository = "https://github.com/pcalnon/juniper-cascor-worker"
Issues = "https://github.com/pcalnon/juniper-cascor-worker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["juniper_cascor_worker*"]

[tool.setuptools.package-data]
juniper_cascor_worker = ["py.typed"]

[tool.black]
line-length = 512
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 512
known_first_party = ["juniper_cascor_worker"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    # Block pytest plugins auto-discovered from the active conda env but
    # unused by this project. dash.testing.plugin transitively imports psutil;
    # if the env has a non-FT psutil wheel (abi3 landed in python3.14t),
    # psutil segfaults during plugin init before pytest collects any tests.
    # pytest_playwright is similarly autoloaded and breaks when `playwright`
    # is missing.
    "-p", "no:dash",
    "-p", "no:playwright",
]
filterwarnings = [
    "error",
    "ignore:CandidateTrainingWorker is deprecated:DeprecationWarning:tests.test_worker",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
    # _brotli is an indirect dep via urllib3/dash that has not declared
    # free-threading safety; under python3.14t this re-enables the GIL and
    # emits a RuntimeWarning that filterwarnings='error' would otherwise
    # promote into a collection failure.
    "ignore:The global interpreter lock \\(GIL\\) has been enabled to load module:RuntimeWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring live manager",
]
timeout = 30

[tool.coverage.run]
source = ["juniper_cascor_worker"]
source_pkgs = ["juniper_cascor_worker"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/data/*",
    "*/logs/*",
    # "*/__main__.py",
    # "*/api/*",
]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "^\\s*pass\\s*$",
]
show_missing = true
precision = 2
